--- a/index.html
+++ b/index.html
@@ -2175,7 +2175,7 @@
                     </ul>
                     <hr />
                     <p class="info-modal-footer">
-                        Built by <a href="https://thomcummings.com/projects" target="_blank" rel="noopener">Thom</a> in Jan 2026
+                        Built by <a href="https://thomcummings.com/projects" target="_blank" rel="noopener">Thom</a> in Jan 2026. VST version coming soon.
                     </p>
                 </div>
             </div>
